--- a/backend/style.css
+++ b/backend/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   font-family: Inter, sans-serif;
+  font-family: 'Anek Gujarati', sans-serif;
   background: #f2f3f5;
   display: flex;
   flex-direction: column;
